--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>🔐 Vigenère Cipher</h1>
+    <h1> Vigenère Cipher</h1>
+    <h2> By Julian</h2>
     <label>Key:</label>
     <input type="text" id="key" placeholder="Enter keyword (e.g. KEYWORD)" />
 
