--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vigenère Cipher Encoder/Decoder</title>
+  <title>A Vigenere Cipher Encoder and Decoder By Julian</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 2rem; background: #f4f4f4; }
     textarea, input { width: 100%; padding: 10px; margin: 10px 0; }
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> Vigenère Cipher</h1>
+    <h1> Vigenere Cipher</h1>
     <h2> By Julian</h2>
     <label>Key:</label>
     <input type="text" id="key" placeholder="Enter keyword (e.g. KEYWORD)" />
